---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2021.06.04
  Changes:
    - Sub-components of various entites are no longer selectable directly
---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 2021.06.05
  Bugfixes:
    - (Industrial) Storage Containers didn't show their contents in the UI, now fixed (kinda)
  Ease of use:
    - "Smart" fast-transfer: transferring items into or out of a Truck Station or Drone port will intelligently select between the fuel box and cargo inventories
---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 2021.06.05
  Changes:
    - Fuel value of Fuel updated
  Bugfixes:
    - Crash in the Zipline
---------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: 2021.06.11
  Features:
    - Added GUI to Power Storage
  Bugfixes:
    - Fix crash when trying to fast-transfer from a tree
    - Rails now work properly in the Build Gun
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 2021.06.12
  Changes:
    - Added UI to better show flight time of the Jetpack
  Bugfixes:
    - Fixed price of Rifle Ammo in AWESOME shop
    - Fixed incorrect icons for resource wells
    - Fixed that Water Extractors did not show on the map
    - Fixed map colour of Splitters/Mergers
    - Fixed Alt Recipe selection screen not showing byproducts properly
    - Fixed that Loader Conveyors were destructible (mostly by Nobelisk explosion)
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 2021.06.13
  Changes:
    - Increased stack size of all Buildings so that the Build Gun can better show affordable amount