@@ -3,6 +3,10 @@ data:extend({
 	{
 		name = "scanner-"..name,
 		localised_name = {"recipe-name.scanner-crash-sites"},
+		icons = {
+			{icon = "__Satisfactorio__/graphics/icons/"..name..".png", icon_size = 64},
+			{icon = "__Satisfactorio__/graphics/icons/object-scanner.png", icon_size = 64, scale = 0.25, shift = {-8,8}}
+		},
 		type = "recipe",
 		ingredients = {},
 		result = name,
