@@ -2,6 +2,10 @@ local name = "geyser"
 data:extend({{
 	name = "scanner-"..name,
 	localised_name = {"recipe-name.scanner",{"entity-name."..name}},
+	icons = {
+		{icon = "__Satisfactorio__/graphics/icons/"..name..".png", icon_size = 64},
+		{icon = "__Satisfactorio__/graphics/icons/resource-scanner-white.png", icon_size = 64, scale = 0.25, shift = {-8,8}}
+	},
 	type = "recipe",
 	ingredients = {},
 	result = name,
