@@ -2,6 +2,10 @@ local name = "power-slugs"
 data:extend({{
 	name = "scanner-"..name,
 	localised_name = {"recipe-name.scanner-power-slugs"},
+	icons = {
+		{icon = "__Satisfactorio__/graphics/icons/green-power-slug.png", icon_size = 64},
+		{icon = "__Satisfactorio__/graphics/icons/object-scanner.png", icon_size = 64, scale = 0.25, shift = {-8,8}}
+	},
 	type = "recipe",
 	ingredients = {},
 	result = "green-power-slug",
