@@ -262,3 +262,4 @@ Version: 0.6.6
 Date: 2021.06.13
   Changes:
     - Increased stack size of all Buildings so that the Build Gun can better show affordable amount
+    - Added "Scanner" icon to resource/object scan "recipe" icons
